Update package.json to match laravel .5.5 package

--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "0.15.3",
+    "axios": "^0.17",
+    "bootstrap-sass": "^3.3.7",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "laravel-mix": "^1.0",
+    "lodash": "^4.17.4",
+    "vue": "^2.1.10",
+    "vue-template-compiler": "^2.1.10",
     "minimatch": "^3.0.2",
     "graceful-fs": "^4.0.0",
-    "cross-env": "3.2.3",
-    "jquery": "2.2.*",
-    "laravel-mix": "0.*",
-    "lodash": "4.17.4",
-    "vue": "2.1.*",
-    "vue-template-compiler": "2.1.*",
-    "semantic-ui": "2.2.10",
-    "optipng-bin": "3.1.4"
+    "semantic-ui": "^2.2.10",
+    "optipng-bin": "^4.0"
   }
 }
